# capstone

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  Doxyfile.in
client/pack/: levels.json
client/pack/animations/: heavy.json  jump.json  ranger.json  strong.json  walk.json
client/pack/maps/: test.json  test2.json  test3.json
client/pack/scripts/: stdlib.lua  test.lua  test2.lua  test3.lua
client/src/: CMakeLists.txt  animation.cpp  animation.h  app.cpp  app.h  character.cpp  character.h  common.h  file.cpp  file.h  mapfile.cpp  mapfile.h  pack.cpp  pack.h  renderer.cpp  renderer.h  script.cpp  script.h  scriptstate.cpp  scriptstate.h  sprite.cpp  sprite.h  world.cpp  world.h
client/src/box2d/: Render.cpp
client/src/characters/: greeny.cpp  greeny.h  heavy.cpp  heavy.h  jump.cpp  jump.h  ranger.cpp  ranger.h  strong.cpp  strong.h
client/src/luabindings/: scriptstate.pkg
client/src/math/: box.cpp  box.h  color.cpp  color.h  math.h  matrix.cpp  matrix.h  point.cpp  point.h  polygon.cpp  polygon.h  transform.cpp  transform.h  vector.cpp  vector.h
client/tests/: CMakeLists.txt  test_physgame.cpp  test_polygon.h
editor/: CMakeLists.txt
editor/src/: CMakeLists.txt  commands.cpp  commands.h  enumeditorcreator.h  enumitemmodel.h  enumitemmodel.inl  hasproperties.cpp  hasproperties.h  main.cpp  mainwindow.cpp  mainwindow.h  mapdata.h  mapfile.cpp  mapfile.h  mapscene.cpp  mapscene.h  propertybrowser.h  propertyitemdelegate.cpp  propertyitemdelegate.h  propertyitemmodel.cpp  propertyitemmodel.h  resources.qrc  util.h
editor/src/editorwidgets/: comboeditor.cpp  comboeditor.h  pointeditor.cpp  pointeditor.h
editor/src/sceneitems/: bodyshapeitem.cpp  bodyshapeitem.h  circleshapeitem.cpp  circleshapeitem.h  connectitem.cpp  connectitem.h  polygonshapeitem.cpp  polygonshapeitem.h  sceneitem.cpp  sceneitem.h  sceneitems.h  shapeitem.cpp  shapeitem.h  vertexitem.cpp  vertexitem.h
modules/: FindBox2D.cmake
pack/maps/: test.json
src/: CMakeLists.txt  app.cpp  app.h  common.h  file.cpp  main.cpp  mapfile.cpp  mapfile.h  math2d.cpp  math2d.h  pack.cpp  pack.h  renderer.cpp  renderer.h  window.cpp  window.h  world.cpp  world.h
src/json/: reader.inl
src/math/: color.cpp  color.h  math.h  matrix.cpp  matrix.h  point.cpp  point.h  transform.cpp  transform.h  vector.cpp  vector.h
tests/: CMakeLists.txt  test.h  test_archive  test_dummy.h  test_pack.h  test_physgame.cpp
util/packer/: CMakeLists.txt  packer.c
